--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Products from "../components/Products.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -6,7 +7,8 @@ import Layout from "../layouts/Layout.astro";
   <img
     draggable="false"
     src="./images/cover.webp"
-    class="w-full my-4"
+    class="w-full"
     alt="SOMOS EXPERTOS EN LA FABRICACIÓN Y CONFECCIÓN DE TEXTILES"
   />
+  <Products />
 </Layout>
