--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import Products from "../components/Products.astro";
 import Layout from "../layouts/Layout.astro";
+import Nosotros from "../components/Nosotros.astro";
+import Products from "../components/Products.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -11,4 +12,5 @@ import Layout from "../layouts/Layout.astro";
     alt="SOMOS EXPERTOS EN LA FABRICACIÓN Y CONFECCIÓN DE TEXTILES"
   />
   <Products />
+  <Nosotros />
 </Layout>
