feat:contact from

--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -15,7 +15,9 @@
   <section
     class="bg-[url('/images/mision.webp')] bg-center bg-no-repeat bg-cover px-4 md:px-8 py-10 pb-20 relative text-white h-full"
   >
-    <h3 class="absolute bottom-0 left-0 text-7xl font-bold opacity-75">
+    <h3
+      class="absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+    >
       MISIÓN
     </h3>
     <p class="text-balance text-xl">
@@ -28,7 +30,9 @@
   <section
     class="bg-[url('/images/vision.webp')] bg-center bg-no-repeat bg-cover px-4 md:px-8 py-10 pb-20 relative text-white h-full"
   >
-    <h3 class="absolute bottom-0 left-0 text-7xl font-bold opacity-75">
+    <h3
+      class="absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+    >
       VISIÓN
     </h3>
     <p class="text-balance text-xl">
@@ -41,10 +45,12 @@
   <section
     class="bg-[url('/images/valor.webp')] bg-center bg-no-repeat bg-cover sm:col-span-2 grid sm:grid-cols-2 gap-8 sm:gap-16 px-4 md:px-8 py-10 pb-20 relative text-white"
   >
-    <h3 class="sm:absolute bottom-0 left-0 text-7xl font-bold opacity-75">
+    <h3
+      class="sm:absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+    >
       VALORES
     </h3>
-    <p class="text-balance text-xl">
+    <p class="sm:text-balance text-xl">
       Nuestros valores nos han permitido mantener operaciones ininterrumpidas
       durante mas de 6 décadas y son la base que nos permite seguir creciendo de
       cara al futuro.
@@ -52,7 +58,7 @@
       Compromiso: Con la calidad en cada uno de los procesos, con nuestros colaboradores
       y por supuesto, con los clientes.
     </p>
-    <p class="text-balance text-xl">
+    <p class="sm:text-balance text-xl">
       Flexibilidad: La cual nos permite responder y adaptarnos de mejor manera a
       los requerimientos mas exigentes.
       <br /><br />
