--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -59,8 +59,8 @@ const links = [
 ---
 
 <footer class="bg-main text-slate-50">
-  <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
-    <div class="mt-16 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
+  <div class="mx-auto max-w-screen-xl px-4 pt-8 pb-16 sm:px-6 lg:px-8">
+    <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
       {
         links.map(({ links, title }) => (
           <div class="text-center sm:text-left">
