--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Nosotros from "../components/Nosotros.astro";
 import Products from "../components/Products.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -13,4 +14,5 @@ import Products from "../components/Products.astro";
   />
   <Products />
   <Nosotros />
+  <Contact />
 </Layout>
