--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Nosotros from "../components/Nosotros.astro";
 import Products from "../components/Products.astro";
 import Contact from "../components/Contact.astro";
+import WhatsIcon from "../components/WhatsIcon.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -15,4 +16,5 @@ import Contact from "../components/Contact.astro";
   <Products />
   <Nosotros />
   <Contact />
+  <WhatsIcon />
 </Layout>
