--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -1,5 +1,5 @@
 <section
-  class="max-w-screen-xl mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 gap-16 justify-stretch my-8"
+  class="max-w-screen-xl sm:mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 gap-16 justify-stretch my-8"
 >
   <img src="./images/workers.webp" class="w-full" />
   <section class="text-main">
@@ -16,11 +16,11 @@
     class="bg-[url('/images/mision.webp')] bg-center bg-no-repeat bg-cover px-4 md:px-8 py-10 pb-20 relative text-white h-full"
   >
     <h3
-      class="absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+      class="absolute bottom-0 left-0 text-3xl sm:text-6xl font-bold opacity-75"
     >
       MISIÓN
     </h3>
-    <p class="text-balance text-xl">
+    <p class="text-balance sm:text-xl">
       Ofrecer soluciones en la manufactura de textiles, elásticos y producto
       terminado de la mas alta calidad, garantizando a nuestros clientes la
       entera satisfacción de sus necesidades, manteniendo la integridad y
@@ -31,11 +31,11 @@
     class="bg-[url('/images/vision.webp')] bg-center bg-no-repeat bg-cover px-4 md:px-8 py-10 pb-20 relative text-white h-full"
   >
     <h3
-      class="absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+      class="absolute bottom-0 left-0 text-3xl sm:text-6xl font-bold opacity-75"
     >
       VISIÓN
     </h3>
-    <p class="text-balance text-xl">
+    <p class="text-balance sm:text-xl">
       Posicionarnos como una empresa innovadora, divertida y con responsabilidad
       social. Con la mejora continua como bandera, posicionarnos como lideres en
       el mercado nacional, manteniendo siempre una estrecha relación con
@@ -46,11 +46,11 @@
     class="bg-[url('/images/valor.webp')] bg-center bg-no-repeat bg-cover sm:col-span-2 grid sm:grid-cols-2 gap-8 sm:gap-16 px-4 md:px-8 py-10 pb-20 relative text-white"
   >
     <h3
-      class="sm:absolute bottom-0 left-0 text-3xl sm:text-7xl font-bold opacity-75"
+      class="sm:absolute bottom-0 left-0 text-3xl sm:text-6xl font-bold opacity-75"
     >
       VALORES
     </h3>
-    <p class="sm:text-balance text-xl">
+    <p class="sm:text-balance sm:text-xl">
       Nuestros valores nos han permitido mantener operaciones ininterrumpidas
       durante mas de 6 décadas y son la base que nos permite seguir creciendo de
       cara al futuro.
@@ -58,7 +58,7 @@
       Compromiso: Con la calidad en cada uno de los procesos, con nuestros colaboradores
       y por supuesto, con los clientes.
     </p>
-    <p class="sm:text-balance text-xl">
+    <p class="sm:text-balance sm:text-xl">
       Flexibilidad: La cual nos permite responder y adaptarnos de mejor manera a
       los requerimientos mas exigentes.
       <br /><br />
