--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -22,7 +22,7 @@ const products = [
 ---
 
 <section
-  class="max-w-screen-xl mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 justify-stretch my-8"
+  class="max-w-screen-xl sm:mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 justify-stretch my-8"
 >
   {
     products.map(({ desc, image, message, title }) => (
