feat: features section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Nosotros from "../components/Nosotros.astro";
 import Products from "../components/Products.astro";
 import Contact from "../components/Contact.astro";
 import WhatsIcon from "../components/WhatsIcon.astro";
+import Features from "../components/Features.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,6 +15,7 @@ import WhatsIcon from "../components/WhatsIcon.astro";
     alt="SOMOS EXPERTOS EN LA FABRICACIÓN Y CONFECCIÓN DE TEXTILES"
   />
   <Products />
+  <Features />
   <Nosotros />
   <Contact />
   <WhatsIcon />
