--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -1,4 +1,5 @@
 <section
+  id="nosotros"
   class="max-w-screen-xl sm:mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 gap-16 justify-stretch my-8"
 >
   <img src="./images/workers.webp" class="w-full" />
@@ -29,6 +30,7 @@
   </section>
   <section
     class="bg-[url('/images/vision.webp')] bg-center bg-no-repeat bg-cover px-4 md:px-8 py-10 pb-20 relative text-white h-full"
+    id="valores"
   >
     <h3
       class="absolute bottom-0 left-0 text-3xl sm:text-6xl font-bold opacity-75"
