--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,5 +1,15 @@
-<header class="bg-main text-slate-50 p-4">
-  <div class="max-w-screen-xl m-auto">
-    <h1 class="font-bold">ELASTITELAS RAMAKAT</h1>
+<header class="bg-main text-slate-50 px-4 py-2">
+  <div class="max-w-screen-xl m-auto flex gap-2 relative">
+    <img src="./logo.webp" class="size-10" alt="logo de la empresa" />
+    <div>
+      <h1 class="font-bold text-lg">ELASTITELAS</h1>
+      <p class="text-xs">RAMAKAT</p>
+    </div>
+    <img
+      src="./logo.webp"
+      alt="logo de la empresa"
+      draggable="false"
+      class="size-20 opacity-50 absolute -top-10 right-20"
+    />
   </div>
 </header>
