--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import WhatsIcon from "../components/WhatsIcon.astro";
 import Features from "../components/Features.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Elastitelas Remakat">
   <img
     draggable="false"
     src="./images/cover.webp"
