--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,10 +1,6 @@
 <header class="bg-main text-slate-50 px-4 py-2">
   <div class="max-w-screen-xl m-auto flex gap-2 relative">
-    <img src="./logo.webp" class="size-10" alt="logo de la empresa" />
-    <div>
-      <h1 class="font-bold text-lg">ELASTITELAS</h1>
-      <p class="text-xs">RAMAKAT</p>
-    </div>
+    <img src="./logotipo.webp" class="h-12" alt="logo de la empresa" />
     <img
       src="./logo.webp"
       alt="logo de la empresa"
