feat: better cover & images resolution

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -21,7 +21,7 @@
       <div class="flex justify-end">
         <button
           type="submit"
-          class="bg-white text-main p-2 rounded-lg mt-4 ml-auto"
+          class="bg-white hover:bg-white/50 transition-colors text-main p-2 rounded-lg mt-4 ml-auto"
           >Enviar Mensaje</button
         >
       </div>
