--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -22,7 +22,7 @@ const features = [
   },
   {
     title: "LLEGAMOS A TU NEGOCIO",
-    desc: "Envíos desde 24 horas y a a toda republica.",
+    desc: "Envíos desde 24 horas y a toda república.",
     img: "./images/delivery.webp",
   },
 ];
