--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -9,7 +9,7 @@
       Somos una empresa 100% mexicana comprometida con la excelencia. Expertos
       en la fabricación, confección y comercialización de productos textiles.
       Nuestra pasión en cada creación nos ha llevado a ser un referente en el
-      sector. Más de 60 años nos avalan como una empresa seria, solida y lista
+      sector. Más de 60 años nos avalan como una empresa seria, sólida y lista
       para cumplir las exigencias de nuestros clientes.
     </p>
   </section>
@@ -23,7 +23,7 @@
     </h3>
     <p class="text-balance sm:text-xl">
       Ofrecer soluciones en la manufactura de textiles, elásticos y producto
-      terminado de la mas alta calidad, garantizando a nuestros clientes la
+      terminado de la más alta calidad, garantizando a nuestros clientes la
       entera satisfacción de sus necesidades, manteniendo la integridad y
       calidad en todos nuestros procesos.
     </p>
@@ -54,7 +54,7 @@
     </h3>
     <p class="sm:text-balance sm:text-xl">
       Nuestros valores nos han permitido mantener operaciones ininterrumpidas
-      durante mas de 6 décadas y son la base que nos permite seguir creciendo de
+      durante más de 6 décadas y son la base que nos permite seguir creciendo de
       cara al futuro.
       <br /><br />
       Compromiso: Con la calidad en cada uno de los procesos, con nuestros colaboradores
@@ -62,9 +62,9 @@
     </p>
     <p class="sm:text-balance sm:text-xl">
       Flexibilidad: La cual nos permite responder y adaptarnos de mejor manera a
-      los requerimientos mas exigentes.
+      los requerimientos más exigentes.
       <br /><br />
-      Excelencia: Integramos este valor en cada producto, proceso y decision.
+      Excelencia: Integramos este valor en cada producto, proceso y decisión.
       <br /><br />
       Innovación: Buscamos siempre la mejora continua a través de la investigación
       y desarrollo; esto nos permite ofrecer siempre opciones innovadoras.
