--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -34,7 +34,7 @@ const products = [
         id={id}
         class="text-main text-center group flex flex-col"
       >
-        <div class="bg-gradient-to-b from-blue-500 to-blue-800 rounded-xl p-8 mb-4 overflow-hidden flex-1 grid place-content-center">
+        <div class="bg-gradient-to-b from-blue-500 to-blue-800 rounded-xl p-2 group-odd:p-8 mb-4 overflow-hidden flex-1 grid place-content-center">
           <img
             src={image}
             draggable="false"
