--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -7,12 +7,12 @@ import MenuSheet from "@/components/MenuSheet";
     class="max-w-screen-xl m-auto flex justify-between items-center gap-2 relative"
   >
     <img src="./logotipo.webp" class="h-12" alt="logo de la empresa" />
-    <MenuSheet client:only />
+    <MenuSheet client:load />
     <img
       src="./logo.webp"
       alt="logo de la empresa"
       draggable="false"
-      class="size-20 opacity-50 absolute -top-10 right-20"
+      class="size-20 opacity-50 absolute -top-10 right-10"
     />
   </div>
 </header>
