--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,13 @@ import Features from "../components/Features.astro";
   <img
     draggable="false"
     src="./images/cover.webp"
-    class="w-full"
+    class="hidden sm:block w-full"
+    alt="SOMOS EXPERTOS EN LA FABRICACIÓN Y CONFECCIÓN DE TEXTILES"
+  />
+  <img
+    draggable="false"
+    src="./images/cover-mobile.webp"
+    class="w-full sm:hidden"
     alt="SOMOS EXPERTOS EN LA FABRICACIÓN Y CONFECCIÓN DE TEXTILES"
   />
   <Products />
