--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -5,12 +5,12 @@ const links = [
     links: [
       {
         label: "Facebook",
-        href: "",
+        href: "https://www.facebook.com/profile.php?id=61566416912355",
         target: "_blank",
       },
       {
         label: "Instagram",
-        href: "",
+        href: "https://www.instagram.com/elastitelasramakat",
         target: "_blank",
       },
     ],
