--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -2,7 +2,7 @@
 const products = [
   {
     title: "Telas",
-    desc: "Nuestras amplia gama en telas garantiza ofrecer soluciones para todo tipo de manufactura, nuestro compromiso con la excelencia se refleja en cada hilo",
+    desc: "Nuestras amplia gama en telas ofrece soluciones para todo tipo de manufactura, nuestro compromiso con la excelencia se refleja en cada hilo.",
     image: "./images/telas.webp",
     message: "Hola, estoy interesado en las telas que ofrecen",
     id: "telas",
@@ -16,7 +16,7 @@ const products = [
   },
   {
     title: "Producto Terminado",
-    desc: "Ropa interior, fajas, pijamas, ropa deportiva, trajes de baño y mas; nuestro equipo esta siempre listo para diseñar y confeccionar cualquier idea",
+    desc: "Ropa interior, fajas, pijamas, ropa deportiva, trajes de baño y mas; nuestro equipo esta siempre listo para diseñar y confeccionar cualquier idea.",
     image: "./images/producto-terminado.webp",
     message: "Hola, estoy interesado en los productos que ofrecen",
     id: "producto-terminado",
