--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -12,7 +12,7 @@ import MenuSheet from "@/components/MenuSheet";
       src="./logo.webp"
       alt="logo de la empresa"
       draggable="false"
-      class="size-20 opacity-50 absolute -top-10 right-10"
+      class="size-10 sm:size-20 opacity-50 absolute sm:-top-10 right-10 -top-5"
     />
   </div>
 </header>
