--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -36,7 +36,7 @@ const features = [
           <img src={img} alt={desc} class="row-span-2 hidden lg:block" />
         ) : (
           <div class={`text-center`}>
-            <img src={img} alt={desc} class="mx-auto mb-2" />
+            <img src={img} alt={desc} class="mx-auto mb-2 size-24" />
             <h3 class="text-2xl">{title}</h3>
             <p class="sm:text-lg lg:text-xl">{desc}</p>
           </div>
