fix: perfomance issues

--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -2,7 +2,7 @@
   id="nosotros"
   class="max-w-screen-xl sm:mx-8 xl:mx-auto bg-main-100 p-8 grid grid-cols-1 sm:grid-cols-2 gap-16 justify-stretch my-8"
 >
-  <img src="./images/workers.webp" class="w-full" />
+  <img src="./images/workers.webp" alt="Fabrica de tela" class="w-full" />
   <section class="text-main">
     <h2 class="mb-8 text-5xl">Nosotros</h2>
     <p class="text-xl text-balance">
