--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -37,6 +37,7 @@ const products = [
         <div class="bg-gradient-to-b from-blue-500 to-blue-800 rounded-xl p-2 group-odd:p-8 mb-4 overflow-hidden flex-1 grid place-content-center">
           <img
             src={image}
+            alt={desc}
             draggable="false"
             class="m-auto object-contain group-hover:-translate-y-4 transition-transform w-full drop-shadow-xl group-last:rounded-2xl"
           />
