--- a/src/components/WhatsIcon.astro
+++ b/src/components/WhatsIcon.astro
@@ -8,6 +8,7 @@ const props = Astro.props;
   class="bg-green-500 p-3 fixed bottom-5 right-5 rounded-full hover:scale-125 transition-all"
 >
   <svg
+    aria-label="Whatsapp icon"
     xmlns="http://www.w3.org/2000/svg"
     width="1em"
     height="1em"
