--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -81,7 +81,7 @@ const links = [
           </div>
         ))
       }
-      <img src="./images/telas-gris.webp" class="h-64 m-auto" />
+      <img src="./images/telas-gris.webp" alt="Tela gris" class="h-64 m-auto" />
     </div>
   </div>
 </footer>
