--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Covers from "@/components/Covers.astro";
 import Catalogo from "@/components/Catalogo.astro";
 ---
 
-<Layout title="Elastitelas Remakat">
+<Layout title="Elastitelas Ramakat">
   <Covers />
   <Products />
   <Catalogo />
