--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -27,6 +27,7 @@
       </div>
     </form>
     <iframe
+      title="Ubicación en Google Maps"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7521.081887520951!2d-99.10352691197535!3d19.518376305789428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fbfb8f3eeb7b%3A0x747e31e4bba188ae!2sElastitelas%20Ramakat!5e0!3m2!1ses-419!2smx!4v1731429489738!5m2!1ses-419!2smx"
       width="100%"
       height="450"
