--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { title } = Astro.props;
   }
   @font-face {
     font-family: "sanchez";
-    src: url("./fonts/Sanchezregular.otf");
+    src: url("/fonts/Sanchezregular.otf");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
