feat: add google verification

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,10 @@ const { title } = Astro.props;
     />
     <meta name="twitter:image" content=" /images/cover-mobile.webp" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="google-site-verification"
+      content="BZCHq6bbb6zbVXce-1ljQytSBZB2DQQQNJWRhq9e0Sk"
+    />
 
     <title>{title}</title>
   </head>
